--- a/SitioColegioWEB_GUI/DemoMaster.master
+++ b/SitioColegioWEB_GUI/DemoMaster.master
@@ -1,10 +1,10 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="DemoMaster.master.cs" Inherits="DemoMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="DemoMaster.master.cs" Inherits="DemoMaster" %>
 
 <!DOCTYPE html>
 <html>
 <head runat="server">
     <meta charset="utf-8">
-    <title> Demos WEB -ISIL Aprende haciendo</title>
+    <title>Proyecto Colegio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
