--- a/SitioColegioWEB_GUI/DemoMaster.master
+++ b/SitioColegioWEB_GUI/DemoMaster.master
@@ -1,5 +1,7 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="DemoMaster.master.cs" Inherits="DemoMaster" %>
 
+<%@ Register assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" tagprefix="ajaxToolkit" %>
+
 <!DOCTYPE html>
 <html>
 <head runat="server">
@@ -9,7 +11,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="CSS/DemoCSS.css" rel="stylesheet" type="text/css" />
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/owl.carousel.css"/> 
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>    
     <asp:ContentPlaceHolder id="head" runat="server">
 
@@ -18,7 +24,32 @@
 <body style="background:#f3f4ee;">
     <form id="form1" runat="server">
     <asp:ScriptManager ID="ScriptManager1" runat="server" EnableScriptGlobalization="True"></asp:ScriptManager>
-    <div>
+       
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Menu Principal</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="navbar-brand" href="#">Consultas</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="#">Mantenimientos</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="WebLogout.aspx">Salir</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+        <div>
        
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
          
