--- a/SitioColegioWEB_GUI/DemoMaster.master
+++ b/SitioColegioWEB_GUI/DemoMaster.master
@@ -28,17 +28,17 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Menu Principal</a>
+    <a class="navbar-brand" href="/MenuPrincipal.aspx">Menu Principal</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="navbar-brand" href="#">Consultas</a>
+          <a class="navbar-brand" href="/Consultas/Consultas.aspx">Consultas</a>
         </li>
         <li class="nav-item">
-          <a class="navbar-brand" href="#">Mantenimientos</a>
+          <a class="navbar-brand" href="/Mantenimientos/Mantenimientos.aspx">Mantenimientos</a>
         </li>
         <li class="nav-item">
           <a class="navbar-brand" href="WebLogout.aspx">Salir</a>
